# Limen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
crates/crawfish-a2a/src/: lib.rs
crates/crawfish-cli/src/: lib.rs
crates/crawfish-cli/tests/: cli.rs
crates/crawfish-core/src/: contract.rs
crates/crawfish-harness-local/: Cargo.toml
crates/crawfish-harness-local/src/: lib.rs
crates/crawfish-openclaw/src/: lib.rs
crates/crawfish-runtime/src/: evaluation.rs  execution.rs  governance.rs  hero.rs  lib.rs
crates/crawfish-runtime/src/tests/: evaluation.rs  execution.rs  support.rs
crates/crawfish-types/src/: lib.rs
crates/limen/: Cargo.toml
crates/limen-bench/: Cargo.toml
crates/limen-bench/src/: agent.rs  arm.rs  exec.rs  kv.rs  lib.rs  main.rs  model.rs  oracle.rs  pilot.rs  record.rs  runner.rs  sim.rs  stats.rs  task.rs
crates/limen/src/: identity.rs  lib.rs  main.rs  mcp.rs  resource.rs  store.rs
crates/limen/tests/: custom_resource.rs  json_export.rs  smoke.rs  witness_chain.rs
docs/: PRD.md  README.md  experiments.md  references 2.md  references.md
docs/experimental/: README.md
docs/project/: CHANGELOG.md
docs/spec/: boundaries 2.md  boundaries.md  boundaries.zh.md  glossary.md  glossary.zh.md  philosophy.md  philosophy.zh.md  related-work 2.md  related-work.md
examples/experimental/remote-swarm/agents/: task_planner.toml
examples/hero-swarm/: demo.sh
examples/hero-swarm/agents/: task_planner.toml
