[workspace]
members = [
  "crates/limen",
  "crates/limen-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0-alpha.1"
repository = "https://github.com/Meirtz/Limen"
homepage = "https://github.com/Meirtz/Limen"
documentation = "https://github.com/Meirtz/Limen"
rust-version = "1.88.0"
authors = ["Meirtz"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
ed25519-dalek = "2.1"
getrandom = "0.2"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tempfile = "3.20.0"
thiserror = "2.0.16"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
