[package]
name = "limen-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Measurement harness for concurrent-agent interference (the apparatus + a deterministic simulation)"
publish = false

[dependencies]
anyhow.workspace = true
limen = { path = "../limen" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true }
