[package]
name = "limen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Advisory-lease + witnessed-audit coordination for concurrent autonomous agents over shared mutable state, via MCP (alpha)"

[[bin]]
name = "limen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
ed25519-dalek.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile.workspace = true
