[package]
name = "limen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Advisory-lease + witnessed-audit coordination for concurrent autonomous agents over shared mutable state, via MCP (alpha)"

[[bin]]
name = "limen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
ed25519-dalek.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
# Optional: a Redis-backed KV resource (shared agent memory). Off by default — the core stays
# dependency-lean; enable with `--features redis`. Uses the synchronous client (the trait is sync).
redis = { version = "1.2", optional = true }

[features]
# A Redis-backed `Resource` for coordinating concurrent agents over a shared Redis namespace.
redis = ["dep:redis"]

[dev-dependencies]
tempfile.workspace = true
